quick_tests/cases/pass/p09_comparison_eq.kdx
fn main() -> i32 {
    let a: i32 = 5;
    let b: i32 = 5;
    if a == b {
        println("a is equal to b");
    }
    return 0;
}