quick_tests/cases/fail/f06_missing_semicolon_after_if.kdx
fn main() -> i32 {
    if true {
        println("True")
    }
    return 0;
}